# trident

./: Cargo.toml  README.md  bench_inputs.csv  benchmark.yml
calculator-lib/: Cargo.toml
calculator-lib/benches/: calculator_benchmark.rs
calculator-lib/src/: lib.rs  naive.rs  optimized.rs
src/: handlers.rs  main.rs  models.rs  state.rs
src/api/: handlers.rs  mod.rs  models.rs
src/calculator/: mod.rs  naive.rs  optimized.rs
