[package]
name = "trident"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6.1.0"

[dev-dependencies]
assert_float_eq = "1.1.4"
rand = "0.8.5"
